--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body{
 }
 #navbar{
     height: 70px;
-    background-color: black;
+   
     margin: 5px;
 }
 #main1{
@@ -17,6 +17,7 @@ body{
     align-items: center;
     flex-wrap: wrap;
     margin: 20px;
+    border: 10px solid red;
 
 }
 #main{
@@ -69,12 +70,203 @@ body{
     }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .content{
     background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
     height: 500px;
     margin: 20px;
     border-radius: 20px;
 }
+
+.outerbox{
+ border: 2px solid rgb(116, 240, 0);
+
+ max-width: 70vw;
+ margin: auto;
+
+
+ 
+
+
+}
+.innerbox{
+    background-color: rgb(20, 236, 0);
+    float: left;
+    align-items: center;
+    justify-content: center;
+    width: 70vw;
+    margin: 50px 50px;
+    
+}
+.texting{
+    background-color: cyan;
+    height: 50px;
+    width: 50px;
+    margin-left: 10px;
+    float: left;
+    padding: 10px;
+    margin: 5px 5px;
+    border-radius: 10px;
+
+
+}
+.texting-item{
+    text-align: center;
+    color: black;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.box{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    /* height: 500px;
+    width: 100%; */
+    background-color: yellow;
+}
+
+/* #main1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 20px;
+    border: 10px solid red;
+
+} */
+.box1{
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    height: 500px;
+    background-image: url(https://scontent.fmaa8-1.fna.fbcdn.net/v/t39.30808-6/308101796_470455718444845_6799287394573922162_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_ohc=v5B4Dy8Q0mkAX-qFYUQ&_nc_ht=scontent.fmaa8-1.fna&oh=00_AfAn2t2U8ES2ApCVKAAvcCQ7WIxIDnCaVIdH6qt9GDKcjw&oe=63FEB7CA);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:contain ;
+    position: relative;
+   
+    margin: 20px;
+    max-width:500px;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
+/* #main{
+    height: 500px;
+    background-image: url(https://scontent.fmaa8-1.fna.fbcdn.net/v/t39.30808-6/308101796_470455718444845_6799287394573922162_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_ohc=v5B4Dy8Q0mkAX-qFYUQ&_nc_ht=scontent.fmaa8-1.fna&oh=00_AfAn2t2U8ES2ApCVKAAvcCQ7WIxIDnCaVIdH6qt9GDKcjw&oe=63FEB7CA);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:contain ;
+    position: relative;
+    
+   
+    
+    margin: 5px;
+    max-width:700px;
+    flex: 1;
+} */
+/* 
+.box2{
+    position: relative;
+    height: 170px;
+    width: 400px;
+    background-color: blue;
+    position: relative;
+    height: 200px;
+    margin: 20px;
+    max-width:400px;
+    flex: 1;
+    
+}
+.box2:hover{
+    height: 200px;
+    width: 500px;
+    background-color: blue;
+    transition-duration: 1s;
+    border-radius: 50px;
+    
+}
+@media screen and (max-width: 800px) {
+    .box1{
+        flex: 100%;
+        max-width: 800px;
+      
+    }
+    .box2{
+        flex: 100%;
+        max-width: 700px;
+      
+    }
+  
+} */
+
 
 
 
@@ -113,6 +305,68 @@ body{
 } */
 
 
+
+
+#main56{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 1rem;
+
+
+}
+#main5{
+    height: 16em;
+    background-image: url(https://scontent.fmaa8-1.fna.fbcdn.net/v/t39.30808-6/308101796_470455718444845_6799287394573922162_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_ohc=v5B4Dy8Q0mkAX-qFYUQ&_nc_ht=scontent.fmaa8-1.fna&oh=00_AfAn2t2U8ES2ApCVKAAvcCQ7WIxIDnCaVIdH6qt9GDKcjw&oe=63FEB7CA);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:contain ;
+    position: relative;
+    border: 1px solid green;
+    max-width:700px;
+    flex: 1;
+}
+
+
+#adds5{
+    height: 200px;
+    background-color:blue;
+    margin: 5px;
+    max-width:700px;
+    flex: 1;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/6/64/Gcoeara_logo.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:contain ;
+    position: relative;
+    border: 1px solid green;
+
+    
+}
+
+@media screen and (max-width: 800px) {
+    #main5 {
+      flex: 100%;
+      max-width: 800px;
+    }
+    #adds5 {
+      flex: 100%;
+      max-width: 800px;
+    }
+}
+
+
+
+
+
+
+#footer{
+    height: 200px;
+    background-color: black;
+    margin: 10px;
+    border: 10px solid white;
+}
 
 
 
